apps/infra/longhorn/basic-auth.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: frontend-basicauth
spec:
  basicAuth:
    secret: longhorn-dashboard-auth
