apps/infra/longhorn/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik-external

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.vulf.haus`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: authentik
      priority: 10
      services:
        - name: longhorn-frontend
          port: 80
    - kind: Rule
      match: "Host(`longhorn.vulf.haus`) && PathPrefix(`/outpost.goauthentik.io/`)"
      services:
        - name: authentik-server
          namespace: authentik
          port: 80
      priority: 15
  tls:
    # shared wildcard cert for *.vulf.haus
    secretName: cm-shared-wildcard-vulfhaus-tls
# ---
# spec:
#   routes:
#     - kind: Rule
#       match: "Host(`vulf.haus`)"
#       middlewares:
#         - name: authentik
#           namespace: authentik
#       priority: 10
#       services: # Unchanged
#     # This part is only required for single-app setups
#     - kind: Rule
#       match: "Host(`app.company`) && PathPrefix(`/outpost.goauthentik.io/`)"
#       priority: 15
#       services:
#         - kind: Service
#           # Or, to use an external Outpost, create an ExternalName service and reference that here.
#           # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
#           name: authentik-server.authentik
#           port: 9000
